WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306594
Unreviewed, add missing `using WTF::protect;` from
306445@main
https://bugs.webkit.org/show_bug.cgi?id=306594
Summary
Unreviewed, add missing `using WTF::protect;` from 306445@main
Chris Dumez
Reported
2026-01-29 19:37:02 PST
Unreviewed, add missing `using WTF::protect;` from
306445@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-01-29 19:38:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57532
EWS
Comment 2
2026-01-29 20:09:37 PST
Committed
306468@main
(da33b09fe8ed): <
https://commits.webkit.org/306468@main
> Reviewed commits have been landed. Closing PR #57532 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-29 20:10:15 PST
<
rdar://problem/169238420
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug