Unreviewed, add missing `using WTF::protect;` from 306445@main https://bugs.webkit.org/show_bug.cgi?id=306594

* Source/WTF/wtf/darwin/DispatchOSObject.h:
* Source/WTF/wtf/darwin/NetworkOSObject.h:
* Source/WTF/wtf/darwin/XPCObjectPtr.h:

Canonical link: https://commits.webkit.org/306468@main