Source/WTF/wtf/darwin/DispatchOSObject.h
@@ -89,3 +89,5 @@ WTF_OS_OBJECT_DISPATCH_TYPES(WTF_DECLARE_DISPATCH_OSOBJECT_RETAIN_TRAITS)
 #endif // !__has_feature(objc_arc)
 
 } // namespace WTF
+
+using WTF::protect;
